@@ -1,5 +1,5 @@
 /*
- * Copyright 2020 - 2024 Riigi Infosüsteemi Amet
+ * Copyright 2020 - 2025 Riigi Infosüsteemi Amet
  *
  * Licensed under the EUPL, Version 1.1 or – as soon they will be approved by
  * the European Commission - subsequent versions of the EUPL (the "Licence");
@@ -17,14 +17,15 @@
 package ee.openeid.validation.service.timemark.report;
 
 import ee.openeid.siva.validation.document.ValidationDocument;
-import ee.openeid.siva.validation.document.report.SignatureScope;
+import ee.openeid.siva.validation.document.report.ArchiveTimeStamp;
+import ee.openeid.siva.validation.document.report.Scope;
 import ee.openeid.siva.validation.document.report.SignatureValidationData;
 import ee.openeid.siva.validation.document.report.ValidationConclusion;
 import ee.openeid.siva.validation.document.report.ValidationWarning;
 import ee.openeid.siva.validation.service.signature.policy.properties.ValidationPolicy;
-import ee.openeid.validation.service.timemark.util.SignatureScopeParser;
 import org.apache.commons.lang3.StringUtils;
 import org.digidoc4j.Container;
+import org.digidoc4j.ContainerValidationResult;
 import org.digidoc4j.DigestDataFile;
 import org.digidoc4j.Signature;
 import org.digidoc4j.SignatureProfile;
@@ -32,15 +33,21 @@ import org.digidoc4j.ValidationResult;
 import org.digidoc4j.impl.ddoc.DDocContainer;
 import org.digidoc4j.impl.ddoc.DDocFacade;
 
-import java.util.Collections;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
+import java.util.stream.Collectors;
 
 public class DDOCContainerValidationReportBuilder extends TimemarkContainerValidationReportBuilder {
 
     public static final String DDOC_TIMESTAMP_WARNING = "The algorithm SHA1 used in DDOC is no longer considered reliable for signature creation!";
 
-    public DDOCContainerValidationReportBuilder(Container container, ValidationDocument validationDocument, ValidationPolicy validationPolicy, ValidationResult validationResult, boolean isReportSignatureEnabled) {
+    public DDOCContainerValidationReportBuilder(
+        Container container,
+        ValidationDocument validationDocument,
+        ValidationPolicy validationPolicy,
+        ContainerValidationResult validationResult,
+        boolean isReportSignatureEnabled
+    ) {
         super(container, validationDocument, validationPolicy, validationResult, isReportSignatureEnabled);
     }
 
@@ -50,9 +57,11 @@ public class DDOCContainerValidationReportBuilder extends TimemarkContainerValid
     }
 
     @Override
-    SignatureValidationData.Indication getIndication(Signature signature, Map<String, ValidationResult> signatureValidationResults) {
-        ValidationResult signatureValidationResult = signatureValidationResults.get(signature.getUniqueId());
-        if (signatureValidationResult.isValid() && validationResult.getErrors().isEmpty()) {
+    SignatureValidationData.Indication getIndication(Signature signature) {
+        boolean isSignatureValid = getSignatureValidationResult(signature.getUniqueId())
+            .map(ValidationResult::isValid)
+            .orElse(false);
+        if (isSignatureValid && validationResult.getErrors().isEmpty()) {
             return SignatureValidationData.Indication.TOTAL_PASSED;
         } else {
             return SignatureValidationData.Indication.TOTAL_FAILED;
@@ -60,7 +69,7 @@ public class DDOCContainerValidationReportBuilder extends TimemarkContainerValid
     }
 
     @Override
-    String getSubIndication(Signature signature, Map<String, ValidationResult> signatureValidationResults) {
+    String getSubIndication(Signature signature) {
         return "";
     }
 
@@ -71,16 +80,15 @@ public class DDOCContainerValidationReportBuilder extends TimemarkContainerValid
 
     @Override
     List<ValidationWarning> getExtraValidationWarnings() {
-        ValidationWarning timestampValidationWarning = new ValidationWarning();
-        timestampValidationWarning.setContent(DDOC_TIMESTAMP_WARNING);
-        return Collections.singletonList(timestampValidationWarning);
+        return new ArrayList<>(List.of(new ValidationWarning(DDOC_TIMESTAMP_WARNING)));
     }
 
     @Override
-    List<SignatureScope> getSignatureScopes(Signature signature, List<String> dataFilenames) {
-        return dataFilenames.stream()
-          .map(SignatureScopeParser::createFullSignatureScopeForDataFile)
-          .toList();
+    List<Scope> getSignatureScopes(Signature signature, List<String> dataFilenames) {
+        return dataFilenames
+                .stream()
+                .map(this::mapDataFile)
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -92,6 +100,19 @@ public class DDOCContainerValidationReportBuilder extends TimemarkContainerValid
     String getSignatureFormat(SignatureProfile profile) {
         DDocFacade dDocFacade = ((DDocContainer) container).getDDoc4JFacade();
         return dDocFacade.getFormat().replaceAll("-", "_") + "_" + dDocFacade.getVersion();
+    }
+
+    @Override
+    List<ArchiveTimeStamp> getArchiveTimestamps(Signature signature) {
+        return null;
+    }
+
+    private Scope mapDataFile(String filename) {
+        Scope signatureScope = new Scope();
+        signatureScope.setName(filename);
+        signatureScope.setContent(FULL_DOCUMENT);
+        signatureScope.setScope(FULL_SIGNATURE_SCOPE);
+        return signatureScope;
     }
 
     private String getDigidocXmlSignatureForm() {
